# webpolicy

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
scripts/: client.py  client_test.py  serve_test.py
src/webpolicy/: action_chunk_broker.py  base_policy.py  client.py  msgpack_numpy_test.py  server.py
src/webpolicy/deco/: validate.py
src/webpolicy/runtime/agents/: policy_agent.py
test/: image_tools_test.py  msgpack_numpy_test.py  server_client_dummy_policy_test.py  validate_decorator_dummy_policy_test.py  validate_decorator_test.py
webpolicy/deploy/: action_chunk_broker.py  client.py  image_tools_test.py  msgpack_numpy_test.py
wep/deploy/: server.py.bak
wep/deploy/runtime/: runtime.py
