[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/webpolicy"]


[project]
name = "webpolicy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Linux (x86_64 or aarch64): JAX 0.5.x
    'jax>=0.5.2; platform_system == "Linux"',
    'jaxlib>=0.5.3; platform_system == "Linux"',
    # macOS ARM (Apple Silicon): JAX 0.5.x
    'jax>=0.5.2; platform_system == "Darwin" and platform_machine == "arm64"',
    'jaxlib>=0.5.3; platform_system == "Darwin" and platform_machine == "arm64"',
    # macOS Intel: pin to 0.4.38
    'jax==0.4.38; platform_system == "Darwin" and platform_machine == "x86_64"',
    'jaxlib==0.4.38; platform_system == "Darwin" and platform_machine == "x86_64"',
    "msgpack>=1.1.0",
    "numpy>=1.23.5",
    "rich>=14.0.0",
    "tyro",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "webpolicy",
]

[tool.uv.sources]
webpolicy = { workspace = true }
