[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/webpolicy"]


[project]
name = "webpolicy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'jax',
    'jaxlib',
    "msgpack>=1.1.0",
    "numpy>=1.23.5",
    "rich>=14.0.0",
    "tyro",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "webpolicy",
]

[tool.uv.sources]
webpolicy = { workspace = true }
